Added error report sending via email.

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
+email_credentials: ~/.email_credentials.yml
 repositories:
   - name: dummy-for-git-sync
     repo1: https://gitup.uni-potsdam.de/CRC1294/Z03/dummy-for-git-sync.git
