--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
-email_credentials: ~/.email_credentials.yml
+email_credentials: /secret/.email_credentials.yml
 repositories:
   - name: dummy-for-git-sync
     remotes:
     - url: https://gitup.uni-potsdam.de/CRC1294/Z03/dummy-for-git-sync.git
       user: hgessner@uni-potsdam.de
-    - url: https://git.overleaf.com/5e186f8ce6368a000147cb91
+    - url: https://git.overleaf.com/5de121e68ea0320001de8252
       user: sfb1294-service@lists.cs.uni-potsdam.de
