--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,8 @@
-email_credentials: /secret/.email_credentials.yml
 work_dir: /data
+email_credentials:
+  # path: /secret/.email_credentials.yml
+  use_cmd: true
+  to: hgessner@uni-potsdam.de
 repositories:
   - name: dummy-for-git-sync
     remotes:
